Make all directives element and attribute

--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
   <div class="container">
     <div wizard class="row">
       <div class="col-md-3">
-        <wizard-steps-navigation></wizard-steps-navigation>
+        <div wizard-steps-navigation></div>
       </div>
       <div class="col-md-9">
-        <wizard-step>
+        <div wizard-step>
           <h1>Step 1</h1>
           <p>Some description for Step 1. <b>Bold some text</b></p>
-        </wizard-step>
+        </div>
 
-        <wizard-step>
+        <div wizard-step>
           <h1>Step 2</h1>
           <p>Description for Step 2</p>
-        </wizard-step>
+        </div>
       </div>
       <div class="col-md-12">
         Pagination
