--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="col-md-12">
-        Pagination
+        <wizard-steps-pagination></wizard-steps-pagination>
       </div>
     </div>
 
@@ -98,7 +98,7 @@
         </wizard-step>
       </div>
       <div class="col-md-12">
-        Pagination
+        <wizard-steps-pagination></wizard-steps-pagination>
       </div>
     </wizard>
 
